--- a/css/ani.css
+++ b/css/ani.css
@@ -1,419 +1,437 @@
-*
-{
+* {
     box-sizing: border-box;
     padding: 0;
     margin: 0;
 }
-li{
+
+li {
     list-style: none;
 }
-img{
+
+img {
     border: 0;
 }
-input,button{
+
+input,
+button {
     border: 0;
     outline: 0
 }
-body
-{
 
+body {
     margin: 0;
     padding: 0;
 }
-.pageMenu{
+
+.pageMenu {
     height: 100%;
 }
-nav
-{
+
+nav {
     position: fixed;
     z-index: 2;
     top: 0;
     left: 0;
-
     width: 100%;
     padding: 1rem;
-
     border-bottom: 1px solid #555;
     background-color: #fff;
 }
-nav a
-{
+
+nav a {
     display: inline-block;
-
     padding: 0 1rem;
-
     cursor: pointer;
     text-transform: uppercase;
 }
-/* partial containers */
-.page-container
-{
-    position: relative;
 
+
+/* partial containers */
+
+.page-container {
+    position: relative;
     width: 100%;
     height: 100%;
     /*transform*/
-
-    -webkit-transform: translate3d(0,0,0);
-       -moz-transform: translate3d(0,0,0);
-        -ms-transform: translate3d(0,0,0);
-         -o-transform: translate3d(0,0,0);
-            transform: translate3d(0,0,0);
+    -webkit-transform: translate3d(0, 0, 0);
+    -moz-transform: translate3d(0, 0, 0);
+    -ms-transform: translate3d(0, 0, 0);
+    -o-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
 }
-.page-view
-{
+
+.page-view {
     position: absolute;
     top: 0;
     left: 0;
-
     width: 100%;
     height: 100%;
-
     /*color: #fff;*/
     /*backface-visibility*/
-
     -webkit-backface-visibility: hidden;
-       -moz-backface-visibility: hidden;
-        -ms-backface-visibility: hidden;
-         -o-backface-visibility: hidden;
-            backface-visibility: hidden;
+    -moz-backface-visibility: hidden;
+    -ms-backface-visibility: hidden;
+    -o-backface-visibility: hidden;
+    backface-visibility: hidden;
     /*perspective*/
     -webkit-perspective: 1000;
-       -moz-perspective: 1000;
-        -ms-perspective: 1000;
-         -o-perspective: 1000;
-            perspective: 1000;
+    -moz-perspective: 1000;
+    -ms-perspective: 1000;
+    -o-perspective: 1000;
+    perspective: 1000;
 }
-.pages
-{
+
+.pages {
     height: inherit;
     padding: 2rem;
 }
-#page1
-{
+
+#page1 {
     background-color: #0ac2d2;
 }
-#page2
-{
+
+#page2 {
     background-color: #60d7a9;
 }
-#page3
-{
+
+#page3 {
     background-color: #fdc162;
 }
-#page4
-{
+
+#page4 {
     background-color: #fd6a62;
 }
+
+
 /* Transitions */
 
+
 /* Default Enter/Leave */
+
 .ng-enter,
-.ng-leave
-{
+.ng-leave {
     /*transition-timing-function*/
     -webkit-transition-timing-function: ease;
-       -moz-transition-timing-function: ease;
-         -o-transition-timing-function: ease;
-            transition-timing-function: ease;
+    -moz-transition-timing-function: ease;
+    -o-transition-timing-function: ease;
+    transition-timing-function: ease;
     /*transition-duration*/
     -webkit-transition-duration: 250ms;
-       -moz-transition-duration: 250ms;
-         -o-transition-duration: 250ms;
-            transition-duration: 250ms;
+    -moz-transition-duration: 250ms;
+    -o-transition-duration: 250ms;
+    transition-duration: 250ms;
     /*transition-property*/
     -webkit-transition-property: opacity;
-       -moz-transition-property: opacity;
-         -o-transition-property: opacity;
-            transition-property: opacity;
+    -moz-transition-property: opacity;
+    -o-transition-property: opacity;
+    transition-property: opacity;
 }
-.ng-enter
-{
+
+.ng-enter {
     opacity: 0;
 }
-.ng-enter.ng-enter-active
-{
+
+.ng-enter.ng-enter-active {
     opacity: 1;
 }
-.ng-leave
-{
+
+.ng-leave {
     opacity: 1;
 }
-.ng-leave.ng-leave-active
-{
+
+.ng-leave.ng-leave-active {
     opacity: 0;
 }
+
+
 /* crossFade */
-.crossFade.ng-enter
-{
+
+.crossFade.ng-enter {
     /*transition-duration*/
     -webkit-transition-duration: 100ms;
-       -moz-transition-duration: 100ms;
-         -o-transition-duration: 100ms;
-            transition-duration: 100ms;
-
+    -moz-transition-duration: 100ms;
+    -o-transition-duration: 100ms;
+    transition-duration: 100ms;
     opacity: 0;
 }
-.crossFade.ng-enter.ng-enter-active
-{
+
+.crossFade.ng-enter.ng-enter-active {
     opacity: 1;
 }
-.crossFade.ng-leave
-{
+
+.crossFade.ng-leave {
     /*transition-duration*/
     -webkit-transition-duration: 100ms;
-       -moz-transition-duration: 100ms;
-         -o-transition-duration: 100ms;
-            transition-duration: 100ms;
-
+    -moz-transition-duration: 100ms;
+    -o-transition-duration: 100ms;
+    transition-duration: 100ms;
     opacity: 1;
 }
-.crossFade.ng-leave.ng-leave-active
-{
+
+.crossFade.ng-leave.ng-leave-active {
     opacity: 0;
 }
+
+
 /* slideRight */
-.slideRight
-{
+
+.slideRight {
     opacity: 1 !important;
 }
-.slideRight.ng-enter
-{
+
+.slideRight.ng-enter {
     /*transition-property*/
     -webkit-transition-property: none;
-       -moz-transition-property: none;
-         -o-transition-property: none;
-            transition-property: none;
+    -moz-transition-property: none;
+    -o-transition-property: none;
+    transition-property: none;
     /*transform*/
-    -webkit-transform: translate3d(-100%,0,0);
-       -moz-transform: translate3d(-100%,0,0);
-        -ms-transform: translate3d(-100%,0,0);
-         -o-transform: translate3d(-100%,0,0);
-            transform: translate3d(-100%,0,0);
+    -webkit-transform: translate3d(-100%, 0, 0);
+    -moz-transform: translate3d(-100%, 0, 0);
+    -ms-transform: translate3d(-100%, 0, 0);
+    -o-transform: translate3d(-100%, 0, 0);
+    transform: translate3d(-100%, 0, 0);
 }
-.slideRight.ng-enter.ng-enter-active
-{
+
+.slideRight.ng-enter.ng-enter-active {
     /*transition-property*/
     -webkit-transition-property: all;
-       -moz-transition-property: all;
-         -o-transition-property: all;
-            transition-property: all;
+    -moz-transition-property: all;
+    -o-transition-property: all;
+    transition-property: all;
     /*transform*/
-    -webkit-transform: translate3d(0,0,0);
-       -moz-transform: translate3d(0,0,0);
-        -ms-transform: translate3d(0,0,0);
-         -o-transform: translate3d(0,0,0);
-            transform: translate3d(0,0,0);
+    -webkit-transform: translate3d(0, 0, 0);
+    -moz-transform: translate3d(0, 0, 0);
+    -ms-transform: translate3d(0, 0, 0);
+    -o-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
 }
-.slideRight.ng-leave
-{
+
+.slideRight.ng-leave {
     /*transition-property*/
     -webkit-transition-property: all;
-       -moz-transition-property: all;
-         -o-transition-property: all;
-            transition-property: all;
+    -moz-transition-property: all;
+    -o-transition-property: all;
+    transition-property: all;
     /*transform*/
-    -webkit-transform: translate3d(0,0,0);
-       -moz-transform: translate3d(0,0,0);
-        -ms-transform: translate3d(0,0,0);
-         -o-transform: translate3d(0,0,0);
-            transform: translate3d(0,0,0);
+    -webkit-transform: translate3d(0, 0, 0);
+    -moz-transform: translate3d(0, 0, 0);
+    -ms-transform: translate3d(0, 0, 0);
+    -o-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
 }
-.slideRight.ng-leave.ng-leave-active
-{
+
+.slideRight.ng-leave.ng-leave-active {
     /*transition-property*/
     -webkit-transition-property: all;
-       -moz-transition-property: all;
-         -o-transition-property: all;
-            transition-property: all;
+    -moz-transition-property: all;
+    -o-transition-property: all;
+    transition-property: all;
     /*transform*/
-    -webkit-transform: translate3d(100%,0,0);
-       -moz-transform: translate3d(100%,0,0);
-        -ms-transform: translate3d(100%,0,0);
-         -o-transform: translate3d(100%,0,0);
-            transform: translate3d(100%,0,0);
+    -webkit-transform: translate3d(100%, 0, 0);
+    -moz-transform: translate3d(100%, 0, 0);
+    -ms-transform: translate3d(100%, 0, 0);
+    -o-transform: translate3d(100%, 0, 0);
+    transform: translate3d(100%, 0, 0);
 }
+
+
 /* slideLeft */
-.slideLeft
-{
+
+.slideLeft {
     opacity: 1 !important;
 }
-.slideLeft.ng-enter
-{
+
+.slideLeft.ng-enter {
     /*transition-property*/
     -webkit-transition-property: none;
-       -moz-transition-property: none;
-         -o-transition-property: none;
-            transition-property: none;
+    -moz-transition-property: none;
+    -o-transition-property: none;
+    transition-property: none;
     /*transform*/
-    -webkit-transform: translate3d(100%,0,0);
-       -moz-transform: translate3d(100%,0,0);
-        -ms-transform: translate3d(100%,0,0);
-         -o-transform: translate3d(100%,0,0);
-            transform: translate3d(100%,0,0);
+    -webkit-transform: translate3d(100%, 0, 0);
+    -moz-transform: translate3d(100%, 0, 0);
+    -ms-transform: translate3d(100%, 0, 0);
+    -o-transform: translate3d(100%, 0, 0);
+    transform: translate3d(100%, 0, 0);
 }
-.slideLeft.ng-enter.ng-enter-active
-{
+
+.slideLeft.ng-enter.ng-enter-active {
     /*transition-property*/
     -webkit-transition-property: all;
-       -moz-transition-property: all;
-         -o-transition-property: all;
-            transition-property: all;
+    -moz-transition-property: all;
+    -o-transition-property: all;
+    transition-property: all;
     /*transform*/
-    -webkit-transform: translate3d(0,0,0);
-       -moz-transform: translate3d(0,0,0);
-        -ms-transform: translate3d(0,0,0);
-         -o-transform: translate3d(0,0,0);
-            transform: translate3d(0,0,0);
+    -webkit-transform: translate3d(0, 0, 0);
+    -moz-transform: translate3d(0, 0, 0);
+    -ms-transform: translate3d(0, 0, 0);
+    -o-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
 }
-.slideLeft.ng-leave
-{
+
+.slideLeft.ng-leave {
     /*transition-property*/
     -webkit-transition-property: all;
-       -moz-transition-property: all;
-         -o-transition-property: all;
-            transition-property: all;
+    -moz-transition-property: all;
+    -o-transition-property: all;
+    transition-property: all;
     /*transform*/
-    -webkit-transform: translate3d(0,0,0);
-       -moz-transform: translate3d(0,0,0);
-        -ms-transform: translate3d(0,0,0);
-         -o-transform: translate3d(0,0,0);
-            transform: translate3d(0,0,0);
+    -webkit-transform: translate3d(0, 0, 0);
+    -moz-transform: translate3d(0, 0, 0);
+    -ms-transform: translate3d(0, 0, 0);
+    -o-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
 }
-.slideLeft.ng-leave.ng-leave-active
-{
+
+.slideLeft.ng-leave.ng-leave-active {
     /*transition-property*/
     -webkit-transition-property: all;
-       -moz-transition-property: all;
-         -o-transition-property: all;
-            transition-property: all;
+    -moz-transition-property: all;
+    -o-transition-property: all;
+    transition-property: all;
     /*transform*/
-    -webkit-transform: translate3d(-100%,0,0);
-       -moz-transform: translate3d(-100%,0,0);
-        -ms-transform: translate3d(-100%,0,0);
-         -o-transform: translate3d(-100%,0,0);
-            transform: translate3d(-100%,0,0);
+    -webkit-transform: translate3d(-100%, 0, 0);
+    -moz-transform: translate3d(-100%, 0, 0);
+    -ms-transform: translate3d(-100%, 0, 0);
+    -o-transform: translate3d(-100%, 0, 0);
+    transform: translate3d(-100%, 0, 0);
 }
+
+
 /* slideDown */
 
-.slideDown.ng-enter
-{
+.slideDown.ng-enter {
     /*transition-property*/
     -webkit-transition-property: none;
-       -moz-transition-property: none;
-         -o-transition-property: none;
-            transition-property: none;
+    -moz-transition-property: none;
+    -o-transition-property: none;
+    transition-property: none;
     /*transform*/
-    -webkit-transform: translate3d(0,-100%,0);
-       -moz-transform: translate3d(0,-100%,0);
-        -ms-transform: translate3d(0,-100%,0);
-         -o-transform: translate3d(0,-100%,0);
-            transform: translate3d(0,-100%,0);
-}
-.slideDown.ng-enter.ng-enter-active
-{
-    /*transition-property*/
-    -webkit-transition-property: all;
-       -moz-transition-property: all;
-         -o-transition-property: all;
-            transition-property: all;
-    /*transform*/
-    -webkit-transform: translate3d(0,0,0);
-       -moz-transform: translate3d(0,0,0);
-        -ms-transform: translate3d(0,0,0);
-         -o-transform: translate3d(0,0,0);
-            transform: translate3d(0,0,0);
-}
-.slideDown.ng-leave
-{
-    /*transition-property*/
-    -webkit-transition-property: all;
-       -moz-transition-property: all;
-         -o-transition-property: all;
-            transition-property: all;
-    /*transform*/
-    -webkit-transform: translate3d(0,0,0);
-       -moz-transform: translate3d(0,0,0);
-        -ms-transform: translate3d(0,0,0);
-         -o-transform: translate3d(0,0,0);
-            transform: translate3d(0,0,0);
-}
-.slideDown.ng-leave.ng-leave-active
-{
-    /*transition-property*/
-    -webkit-transition-property: all;
-       -moz-transition-property: all;
-         -o-transition-property: all;
-            transition-property: all;
-    /*transform*/
-    -webkit-transform: translate3d(0,100%,0);
-       -moz-transform: translate3d(0,100%,0);
-        -ms-transform: translate3d(0,100%,0);
-         -o-transform: translate3d(0,100%,0);
-            transform: translate3d(0,100%,0);
-}
-/* slideUp */
-.slideUp
-{
-    opacity: 1 !important;
-}
-.slideUp.ng-enter
-{
-    /*transition-property*/
-    -webkit-transition-property: none;
-       -moz-transition-property: none;
-         -o-transition-property: none;
-            transition-property: none;
-    /*transform*/
-    -webkit-transform: translate3d(0,100%,0);
-       -moz-transform: translate3d(0,100%,0);
-        -ms-transform: translate3d(0,100%,0);
-         -o-transform: translate3d(0,100%,0);
-            transform: translate3d(0,100%,0);
-}
-.slideUp.ng-enter.ng-enter-active
-{
-    /*transition-property*/
-    -webkit-transition-property: all;
-       -moz-transition-property: all;
-         -o-transition-property: all;
-            transition-property: all;
-    /*transform*/
-    -webkit-transform: translate3d(0,0,0);
-       -moz-transform: translate3d(0,0,0);
-        -ms-transform: translate3d(0,0,0);
-         -o-transform: translate3d(0,0,0);
-            transform: translate3d(0,0,0);
-}
-.slideUp.ng-leave
-{
-    /*transition-property*/
-    -webkit-transition-property: all;
-       -moz-transition-property: all;
-         -o-transition-property: all;
-            transition-property: all;
-    /*transform*/
-    -webkit-transform: translate3d(0,0,0);
-       -moz-transform: translate3d(0,0,0);
-        -ms-transform: translate3d(0,0,0);
-         -o-transform: translate3d(0,0,0);
-            transform: translate3d(0,0,0);
-}
-.slideUp.ng-leave.ng-leave-active
-{
-    /*transition-property*/
-    -webkit-transition-property: all;
-       -moz-transition-property: all;
-         -o-transition-property: all;
-            transition-property: all;
-    /*transform*/
-    -webkit-transform: translate3d(0,-100%,0);
-       -moz-transform: translate3d(0,-100%,0);
-        -ms-transform: translate3d(0,-100%,0);
-         -o-transform: translate3d(0,-100%,0);
-            transform: translate3d(0,-100%,0);
+    -webkit-transform: translate3d(0, -100%, 0);
+    -moz-transform: translate3d(0, -100%, 0);
+    -ms-transform: translate3d(0, -100%, 0);
+    -o-transform: translate3d(0, -100%, 0);
+    transform: translate3d(0, -100%, 0);
 }
 
-.weui-cell_access{
+.slideDown.ng-enter.ng-enter-active {
+    /*transition-property*/
+    -webkit-transition-property: all;
+    -moz-transition-property: all;
+    -o-transition-property: all;
+    transition-property: all;
+    /*transform*/
+    -webkit-transform: translate3d(0, 0, 0);
+    -moz-transform: translate3d(0, 0, 0);
+    -ms-transform: translate3d(0, 0, 0);
+    -o-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
+}
+
+.slideDown.ng-leave {
+    /*transition-property*/
+    -webkit-transition-property: all;
+    -moz-transition-property: all;
+    -o-transition-property: all;
+    transition-property: all;
+    /*transform*/
+    -webkit-transform: translate3d(0, 0, 0);
+    -moz-transform: translate3d(0, 0, 0);
+    -ms-transform: translate3d(0, 0, 0);
+    -o-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
+}
+
+.slideDown.ng-leave.ng-leave-active {
+    /*transition-property*/
+    -webkit-transition-property: all;
+    -moz-transition-property: all;
+    -o-transition-property: all;
+    transition-property: all;
+    /*transform*/
+    -webkit-transform: translate3d(0, 100%, 0);
+    -moz-transform: translate3d(0, 100%, 0);
+    -ms-transform: translate3d(0, 100%, 0);
+    -o-transform: translate3d(0, 100%, 0);
+    transform: translate3d(0, 100%, 0);
+}
+
+
+/* slideUp */
+
+.slideUp {
+    opacity: 1 !important;
+}
+
+.slideUp.ng-enter {
+    /*transition-property*/
+    -webkit-transition-property: none;
+    -moz-transition-property: none;
+    -o-transition-property: none;
+    transition-property: none;
+    /*transform*/
+    -webkit-transform: translate3d(0, 100%, 0);
+    -moz-transform: translate3d(0, 100%, 0);
+    -ms-transform: translate3d(0, 100%, 0);
+    -o-transform: translate3d(0, 100%, 0);
+    transform: translate3d(0, 100%, 0);
+}
+
+.slideUp.ng-enter.ng-enter-active {
+    /*transition-property*/
+    -webkit-transition-property: all;
+    -moz-transition-property: all;
+    -o-transition-property: all;
+    transition-property: all;
+    /*transform*/
+    -webkit-transform: translate3d(0, 0, 0);
+    -moz-transform: translate3d(0, 0, 0);
+    -ms-transform: translate3d(0, 0, 0);
+    -o-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
+}
+
+.slideUp.ng-leave {
+    /*transition-property*/
+    -webkit-transition-property: all;
+    -moz-transition-property: all;
+    -o-transition-property: all;
+    transition-property: all;
+    /*transform*/
+    -webkit-transform: translate3d(0, 0, 0);
+    -moz-transform: translate3d(0, 0, 0);
+    -ms-transform: translate3d(0, 0, 0);
+    -o-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
+}
+
+.slideUp.ng-leave.ng-leave-active {
+    /*transition-property*/
+    -webkit-transition-property: all;
+    -moz-transition-property: all;
+    -o-transition-property: all;
+    transition-property: all;
+    /*transform*/
+    -webkit-transform: translate3d(0, -100%, 0);
+    -moz-transform: translate3d(0, -100%, 0);
+    -ms-transform: translate3d(0, -100%, 0);
+    -o-transform: translate3d(0, -100%, 0);
+    transform: translate3d(0, -100%, 0);
+}
+
+.weui-cell_access {
     color: #5a5a5a
+}
+
+
+.icon {
+    width: 1em;
+    height: 1em;
+    vertical-align: -0.15em;
+    fill: currentColor;
+    overflow: hidden;
+}
+.black{
+    color: #000
 }
